# hippox

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
examples/: mnist_example.py
hippox/: basis_measures.py  core.py
main/: core.py  diagonalization.py
src/hippox/: __init__.py  basis_measures.py  diagonalization.py  main.py
src/hippox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
