[metadata]
name = hippox
version = 0.0.6
author = Jacob Goodale
author_email = goodalejacob@gmail.com
description = High-order Polynomial Projection Operators (HiPPO) for JAX
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JPGoodale/hippox
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src